--- a/ElvUI_VisualProcs/locales/load_locales.xml
+++ b/ElvUI_VisualProcs/locales/load_locales.xml
@@ -1,1 +1,4 @@
-<Ui xmlns="http://www.blizzard.com/wow/ui/">	<Script file="English.lua"/>	<Script file="Russian.lua"/></Ui>
+<Ui xmlns="http://www.blizzard.com/wow/ui/">
+	<Script file="english.lua"/>
+	<Script file="russian.lua"/>
+</Ui>
